--- a/secciones/portfolio/retratos/mascotas/index.html
+++ b/secciones/portfolio/retratos/mascotas/index.html
@@ -66,57 +66,57 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/4djqM5K/mascota1.jpg"> </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/styhDTD/mascota1.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/ngs6s7n/mascota2.jpg"> </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/chqbbfx/mascota2.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/CJn1QnT/mascota3.jpg"> </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/x6QK7fj/mascota3.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/QDqHZ6s/mascota4.jpg"> </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/P5q5gTp/mascota4.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/VpSLqFw/mascota5.jpg"> </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/gT7wPsH/mascota5.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/9wwDLv6/mascota6.jpg"> </a>            
+              <a href="#" title="Image 6" data-bs-toggle="modal" data-bs-target="#modalImage6"><img class="foto" src="https://i.ibb.co/cFqJD8k/mascota6.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/0jV2PWq/mascota7.jpg"> </a>
+              <a href="#" title="Image 7" data-bs-toggle="modal" data-bs-target="#modalImage7"><img class="foto" src="https://i.ibb.co/LdLghYm/mascota7.jpg"> </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/fN8QCZv/mascota8.jpg"> </a>            
+              <a href="#" title="Image 8" data-bs-toggle="modal" data-bs-target="#modalImage8"><img class="foto" src="https://i.ibb.co/Pch6q4L/mascota8.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/ssCzsFd/mascota9.jpg"> </a>            
+              <a href="#" title="Image 9" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/d0YkvFm/mascota9.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/kGYTWk7/mascota10.jpg"> </a>            
+              <a href="#" title="Image 10" data-bs-toggle="modal" data-bs-target="#modalImage10"><img class="foto" src="https://i.ibb.co/hmdFq4Q/mascota10.jpg"> </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/37GdXtD/CARATULA-GALERIA-DSC-0769.jpg"> </a>            
+              <a href="#" title="Image 11" data-bs-toggle="modal" data-bs-target="#modalImage11"><img class="foto" src="https://i.ibb.co/3Rtr7DD/mascota-caratula.jpg"> </a>            
             </div>
           </div>
           
@@ -128,7 +128,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/4djqM5K/mascota1.jpg">
+          <img src="https://i.ibb.co/styhDTD/mascota1.jpg">
         </div>
       </div>
     </div>
@@ -136,7 +136,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/ngs6s7n/mascota2.jpg">
+          <img src="https://i.ibb.co/chqbbfx/mascota2.jpg">
         </div>
       </div>
     </div>
@@ -144,7 +144,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/CJn1QnT/mascota3.jpg">
+          <img src="https://i.ibb.co/x6QK7fj/mascota3.jpg">
         </div>
       </div>
     </div>
@@ -152,7 +152,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/QDqHZ6s/mascota4.jpg">
+          <img src="https://i.ibb.co/P5q5gTp/mascota4.jpg">
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/VpSLqFw/mascota5.jpg">
+          <img src="https://i.ibb.co/gT7wPsH/mascota5.jpg">
         </div>
       </div>
     </div>
@@ -168,7 +168,7 @@
     <div tabindex="-1" aria-labelledby="modalImage6" aria-hidden="true" class="modal fade" id="modalImage6">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/9wwDLv6/mascota6.jpg">
+          <img src="https://i.ibb.co/DKQRv2G/mascota6vertical.jpg">
         </div>
       </div>
     </div>
@@ -176,7 +176,7 @@
     <div tabindex="-1" aria-labelledby="modalImage7" aria-hidden="true" class="modal fade" id="modalImage7">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/0jV2PWq/mascota7.jpg">
+            <img src="https://i.ibb.co/LdLghYm/mascota7.jpg">
           </div>
         </div>
       </div>
@@ -184,7 +184,7 @@
       <div tabindex="-1" aria-labelledby="modalImage8" aria-hidden="true" class="modal fade" id="modalImage8">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/fN8QCZv/mascota8.jpg">
+            <img src="https://i.ibb.co/Pch6q4L/mascota8.jpg">
           </div>
         </div>
       </div>
@@ -192,7 +192,7 @@
       <div tabindex="-1" aria-labelledby="modalImage9" aria-hidden="true" class="modal fade" id="modalImage9">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/ssCzsFd/mascota9.jpg">
+            <img src="https://i.ibb.co/d0YkvFm/mascota9.jpg">
           </div>
         </div>
       </div>
@@ -200,7 +200,7 @@
       <div tabindex="-1" aria-labelledby="modalImage10" aria-hidden="true" class="modal fade" id="modalImage10">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/kGYTWk7/mascota10.jpg">
+            <img src="https://i.ibb.co/hmdFq4Q/mascota10.jpg">
           </div>
         </div>
       </div>
@@ -208,7 +208,7 @@
       <div tabindex="-1" aria-labelledby="modalImage11" aria-hidden="true" class="modal fade" id="modalImage11">
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content">
-            <img src="https://i.ibb.co/37GdXtD/CARATULA-GALERIA-DSC-0769.jpg">
+            <img src="https://i.ibb.co/3Rtr7DD/mascota-caratula.jpg">
           </div>
         </div>
       </div>
