--- a/secciones/portfolio/producto/telares/index.html
+++ b/secciones/portfolio/producto/telares/index.html
@@ -67,27 +67,27 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/YLLqkB8/telares1.jpg" > </a>
+              <a href="#" title="Image 1" data-bs-toggle="modal" data-bs-target="#modalImage1"><img class="foto" src="https://i.ibb.co/C6YW3gB/telares1.jpg" > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/kXDkR7H/telares2.jpg" > </a>
+              <a href="#" title="Image 2" data-bs-toggle="modal" data-bs-target="#modalImage2"><img class="foto" src="https://i.ibb.co/dD0JsPM/telares2.jpg" > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6 ">
             <div class="thumbnail">
-              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/sFMrhNc/telares3.jpg" > </a>
+              <a href="#" title="Image 3" data-bs-toggle="modal" data-bs-target="#modalImage3"><img class="foto" src="https://i.ibb.co/L9q7L5h/telares3.jpg" > </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/Y8GMZDt/telares4.jpg" > </a>            
+              <a href="#" title="Image 4" data-bs-toggle="modal" data-bs-target="#modalImage4"><img class="foto" src="https://i.ibb.co/sQc80T2/telares4.jpg" > </a>            
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail img-responsive">
-              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/4T754ct/telares-caratula.jpg" > </a>            
+              <a href="#" title="Image 5" data-bs-toggle="modal" data-bs-target="#modalImage5"><img class="foto" src="https://i.ibb.co/vkybxz2/telares-caratula.jpg" > </a>            
             </div>
           </div>
     
@@ -98,7 +98,7 @@
     <div tabindex="-1" aria-labelledby="modalImage1" aria-hidden="true" class="modal fade" id="modalImage1">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/YLLqkB8/telares1.jpg">
+          <img src="https://i.ibb.co/C6YW3gB/telares1.jpg">
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
     <div tabindex="-1" aria-labelledby="modalImage2" aria-hidden="true" class="modal fade" id="modalImage2">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/kXDkR7H/telares2.jpg">
+          <img src="https://i.ibb.co/dD0JsPM/telares2.jpg">
         </div>
       </div>
     </div>
@@ -114,7 +114,7 @@
     <div tabindex="-1" aria-labelledby="modalImage3" aria-hidden="true" class="modal fade" id="modalImage3">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/sFMrhNc/telares3.jpg">
+          <img src="https://i.ibb.co/L9q7L5h/telares3.jpg">
         </div>
       </div>
     </div>
@@ -122,7 +122,7 @@
     <div tabindex="-1" aria-labelledby="modalImage4" aria-hidden="true" class="modal fade" id="modalImage4">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/Y8GMZDt/telares4.jpg">
+          <img src="https://i.ibb.co/S0S19YL/telares4vertical.jpg">
         </div>
       </div>
     </div>
@@ -130,7 +130,7 @@
     <div tabindex="-1" aria-labelledby="modalImage5" aria-hidden="true" class="modal fade" id="modalImage5">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <img src="https://i.ibb.co/4T754ct/telares-caratula.jpg">
+          <img src="https://i.ibb.co/vkybxz2/telares-caratula.jpg">
       </div>
     </div>
     </div>
